# ml-calibration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: DESIGN_DECISIONS.md  Makefile  ROADMAP.md  conf.py  example_walkthrough.md  getting_started.md  index.rst  madmax_step3_antenna_alignment_technical_design.md  madmax_step4_measurement_technical_design.md  madmax_step5_joint_inference_technical_design.md  requirements.txt  testing.md
docs/algorithm/: index.md  step0.md  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md  step7.md
docs/api/: amortized.rst  config.rst  constraints.rst  control.rst  gp.rst  hardware.rst  index.rst  loop.rst  objectives.rst  records.rst  sbc.rst  simulator.rst  steps.rst
docs/design/: DESIGN_DECISIONS.md  index.md  madmax_closed_loop_calibration_proposal.md  madmax_step1_booster_proposal_technical_design.md  madmax_step3_antenna_alignment_technical_design.md  madmax_step4_measurement_technical_design.md  madmax_step5_joint_inference_technical_design.md  madmax_step6_predictive_model_technical_design.md
examples/: generate_settings.py  run_synthetic_calibration.py  train_npe.py
settings/: prototype.toml
tests/: conftest.py  test_amortized.py  test_benchmark.py  test_control_and_constraints.py  test_curve_summaries.py  test_gp_and_objectives.py  test_loop_end_to_end.py  test_settings.py  test_simulator.py  test_step1_propose.py  test_step3_antenna.py  test_step4_measure.py  test_step5_inference.py  test_step6_predictive.py
weights/: npe_prototype.npz  npe_prototype.pt
(+30 files in other folders)
